[gd_scene load_steps=23 format=4 uid="uid://bdwbuwwgt3roq"]

[ext_resource type="Texture2D" uid="uid://d1f0huq3f5bo8" path="res://Tile Sets/Wall Tiles/pathway-north.png" id="1_8i7r8"]
[ext_resource type="Script" uid="uid://bqftpxoqa4jyw" path="res://Tile Sets/door_up.gd" id="1_rsif5"]
[ext_resource type="Script" uid="uid://b4m11xfodh330" path="res://Tile Sets/room.gd" id="1_vofp0"]
[ext_resource type="Texture2D" uid="uid://c8a6fqmt8i5en" path="res://Tile Sets/Wall Tiles/corner.png" id="2_krgyq"]
[ext_resource type="Texture2D" uid="uid://butdjhuj1yxlb" path="res://Tile Sets/Wall Tiles/wall.png" id="3_c5kuq"]
[ext_resource type="Script" uid="uid://dsnx17w07iprw" path="res://Tile Sets/door_right.gd" id="3_mkwg8"]
[ext_resource type="Script" uid="uid://bj13t360b2gdg" path="res://Tile Sets/door_down.gd" id="4_rwvu7"]
[ext_resource type="Script" uid="uid://c85jnuqfghhnj" path="res://Tile Sets/door_left.gd" id="5_c4jah"]
[ext_resource type="Texture2D" uid="uid://bw5tkylrrwwm8" path="res://Tile Sets/Floor Tilemap/FloorTile.png" id="12_udaa2"]
[ext_resource type="Texture2D" uid="uid://bduhj5jhgx4n6" path="res://Tile Sets/Floor Tilemap/WallTile.png" id="13_fc7gd"]
[ext_resource type="Script" uid="uid://e8iednlnedbg" path="res://Tile Sets/collision_shape_2d.gd" id="13_tyvmf"]
[ext_resource type="Texture2D" uid="uid://brnl6fas6th6w" path="res://Tile Sets/Floor Tilemap/Corner.png" id="14_ghwim"]
[ext_resource type="Script" uid="uid://bk8fl6ml1tmev" path="res://Tile Sets/tile_map_layer.gd" id="15_ce5i6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yfxc5"]
texture = ExtResource("12_udaa2")
margins = Vector2i(4, 4)
separation = Vector2i(8, 8)
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ngtdn"]
texture = ExtResource("13_fc7gd")
margins = Vector2i(4, 2)
separation = Vector2i(8, 6)
texture_region_size = Vector2i(64, 32)
0:0/next_alternative_id = 4
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/transpose = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/transpose = true
1:0/0 = 0
0:1/next_alternative_id = 4
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_h = true
0:1/1/transpose = true
0:1/2 = 2
0:1/2/flip_v = true
0:1/3 = 3
0:1/3/transpose = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ry3d"]
texture = ExtResource("14_ghwim")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 4
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true

[sub_resource type="TileSet" id="TileSet_fu2cp"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_yfxc5")
sources/1 = SubResource("TileSetAtlasSource_ngtdn")
sources/2 = SubResource("TileSetAtlasSource_6ry3d")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jcfji"]
texture = ExtResource("2_krgyq")
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, -16, 16, -16, 16, -16, 16, 16, -16, 16, -16, -16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_727xo"]
texture = ExtResource("3_c5kuq")
0:0/size_in_atlas = Vector2i(4, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -16, 32, -16, 32, 16, -32, 16, -32, -16)

[sub_resource type="TileSet" id="TileSet_jn4is"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jcfji")
sources/1 = SubResource("TileSetAtlasSource_727xo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jn4is"]
size = Vector2(64, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vofp0"]
size = Vector2(1913, 1071.5)

[node name="Room" type="Node2D"]
script = ExtResource("1_vofp0")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_fu2cp")
script = ExtResource("15_ce5i6")

[node name="Walls" type="TileMapLayer" parent="."]
rotation = 0.00023583
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAADAAAAAQAAAAAAAAACAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAATAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAfAAAAAQAAAAAAAAAjAAAAAQAAAAAAAAAnAAAAAQAAAAAAAAArAAAAAQAAAAAAAAAvAAAAAQAAAAAAAAAzAAAAAQAAAAAAAAA3AAAAAQAAAAAAAAA7AAAAAQAAAAAAAAA/AAAAAQAAAAAAAABDAAAAAQAAAAAAAABHAAAAAQAAAAAAAABLAAAAAQAAAAAAAABPAAAAAQAAAAAAAABTAAAAAQAAAAAAAABXAAAAAQAAAAAAAABbAAAAAQAAAAAAAABfAAAAAQAAAAAAAABjAAAAAQAAAAAAAABnAAAAAQAAAAAAAABrAAAAAQAAAAAAAABvAAAAAQAAAAAAAABzAAAAAQAAAAAAAAB3AAAAAAAAAAAAABB1AAAAAQAAAAAAAAB3AAIAAQAAAAAAAFB3AAYAAQAAAAAAAFB3AAoAAQAAAAAAAFB3AA4AAQAAAAAAAFB3ABIAAQAAAAAAAFB3ABYAAQAAAAAAAFB3ABoAAQAAAAAAAFB3AB4AAQAAAAAAAFB3ACIAAQAAAAAAAFB3ACYAAQAAAAAAAFB3ACoAAQAAAAAAAFB3AC4AAQAAAAAAAFB3ADIAAQAAAAAAAFB3ADYAAQAAAAAAAFB3ADoAAQAAAAAAAFB3AD4AAQAAAAAAAFB3AEMAAAAAAAAAADB3AEEAAQAAAAAAAFB1AEMAAQAAAAAAADBxAEMAAQAAAAAAADBtAEMAAQAAAAAAADBpAEMAAQAAAAAAADBlAEMAAQAAAAAAADBhAEMAAQAAAAAAADBdAEMAAQAAAAAAADBZAEMAAQAAAAAAADBVAEMAAQAAAAAAADBRAEMAAQAAAAAAADBNAEMAAQAAAAAAADBJAEMAAQAAAAAAADBFAEMAAQAAAAAAADBBAEMAAQAAAAAAADA9AEMAAQAAAAAAADA5AEMAAQAAAAAAADA1AEMAAQAAAAAAADAxAEMAAQAAAAAAADAtAEMAAQAAAAAAADApAEMAAQAAAAAAADAlAEMAAQAAAAAAADAhAEMAAQAAAAAAADAdAEMAAQAAAAAAADAZAEMAAQAAAAAAADAVAEMAAQAAAAAAADARAEMAAQAAAAAAADANAEMAAQAAAAAAADAJAEMAAQAAAAAAADAFAEMAAQAAAAAAADAAAEMAAAAAAAAAAGACAEMAAQAAAAAAADAAAEEAAQAAAAAAAGAAAD4AAQAAAAAAAGAAADoAAQAAAAAAAGAAADYAAQAAAAAAAGAAADIAAQAAAAAAAGAAAC4AAQAAAAAAAGAAACoAAQAAAAAAAGAAACYAAQAAAAAAAGAAACIAAQAAAAAAAGAAAB4AAQAAAAAAAGAAABoAAQAAAAAAAGAAABYAAQAAAAAAAGAAABIAAQAAAAAAAGAAAA4AAQAAAAAAAGAAAAoAAQAAAAAAAGAAAAcAAQAAAAAAAGAAAAMAAQAAAAAAAGAAAAIAAQAAAAAAAGA=")
tile_set = SubResource("TileSet_jn4is")

[node name="Door" type="Area2D" parent="."]
visible = false
position = Vector2(960, 6)
monitorable = false
script = ExtResource("1_rsif5")

[node name="Sprite2D" type="Sprite2D" parent="Door"]
texture = ExtResource("1_8i7r8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jn4is")

[node name="Door2" type="Area2D" parent="."]
visible = false
position = Vector2(1914, 540)
monitorable = false
script = ExtResource("3_mkwg8")

[node name="Sprite2D" type="Sprite2D" parent="Door2"]
rotation = 1.5708
texture = ExtResource("1_8i7r8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_jn4is")

[node name="Door3" type="Area2D" parent="."]
visible = false
position = Vector2(960, 1083)
monitorable = false
script = ExtResource("4_rwvu7")

[node name="Sprite2D" type="Sprite2D" parent="Door3"]
rotation = 3.14159
texture = ExtResource("1_8i7r8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door3"]
position = Vector2(0, -1)
rotation = 3.14159
shape = SubResource("RectangleShape2D_jn4is")

[node name="Door4" type="Area2D" parent="."]
visible = false
position = Vector2(6, 540)
rotation = -1.5708
monitorable = false
script = ExtResource("5_c4jah")

[node name="Sprite2D" type="Sprite2D" parent="Door4"]
texture = ExtResource("1_8i7r8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door4"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jn4is")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("13_tyvmf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(957, 536.75)
shape = SubResource("RectangleShape2D_vofp0")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
